--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -20,5 +20,30 @@
   <%= @restaurant.category %>
 </p>
 
+<ul class="list-group">
+  <ul class="list-group">
+  <% @restaurant.reviews.each do |review| %>
+    <li class="list-group-item">
+      <%= review.content %>
+      <%= link_to "Remove",
+                  review_path(review),
+                  method: :delete,
+                  data: { confirm: "Are you sure?" } %>
+    </li>
+  <% end %>
+</ul>
+</ul>
+
+
+
 <%= link_to 'Edit', edit_restaurant_path(@restaurant) %> |
-<%= link_to 'Back', restaurants_path %>
+<%= link_to 'Back', restaurants_path %> |
+<%= link_to 'Leave a review', new_restaurant_review_path(@restaurant) %>
+
+<hr>
+<h3>Leave a review</h3>
+<%# <%= simple_form_for [ @restaurant, @review ] do |f| %>
+  <%# <%= f.input :content %>
+  <%# <%= f.input :rating %>
+  <%# <%= f.submit "Submit review", class: "btn btn-primary" %>
+<%# <% end %> %> %> %> %> %>
