embed form into show page

--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -38,12 +38,11 @@
 
 <%= link_to 'Edit', edit_restaurant_path(@restaurant) %> |
 <%= link_to 'Back', restaurants_path %> |
-<%= link_to 'Leave a review', new_restaurant_review_path(@restaurant) %>
 
 <hr>
 <h3>Leave a review</h3>
-<%# <%= simple_form_for [ @restaurant, @review ] do |f| %>
-  <%# <%= f.input :content %>
-  <%# <%= f.input :rating %>
-  <%# <%= f.submit "Submit review", class: "btn btn-primary" %>
-<%# <% end %> %> %> %> %> %>
+<%= simple_form_for [ @restaurant, @review ] do |f| %>
+  <%= f.input :content %>
+  <%= f.input :rating %>
+  <%= f.submit "Submit review", class: "btn btn-primary" %>
+<% end %>
